user service- basic auth, google oauth, facebook oauth flow

--- a/package.json
+++ b/package.json
@@ -13,34 +13,43 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:fix": "eslint \"{src,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "8.2.2",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "8.2.2",
-    "@nestjs/jwt": "8.0.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.2.2",
     "@nestjs/typeorm": "^8.0.2",
+    "argon2": "^0.28.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "google-auth-library": "^7.10.3",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "nestjs-pino": "^2.3.1",
+    "nestjs-typeorm-paginate": "^3.1.3",
     "passport": "0.5.0",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
     "pino-http": "^6.0.0",
     "pino-pretty": "^7.2.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
-    "typeorm": "^0.2.41"
+    "twilio": "^3.71.3",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@nestjs/cli": "8.1.5",
