--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.2.2",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/multer": "^1.4.7",
     "argon2": "^0.28.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "eslint-plugin-prettier": "^4.0.0",
     "google-auth-library": "^7.10.3",
+    "mime-types": "^2.1.34",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "nestjs-pino": "^2.3.1",
@@ -45,11 +47,14 @@
     "passport-local": "1.0.0",
     "pino-http": "^6.0.0",
     "pino-pretty": "^7.2.0",
+    "probe-image-size": "^7.2.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
+    "sharp": "^0.29.3",
     "twilio": "^3.71.3",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "8.1.5",
