--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "8.2.2",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.2.2",
     "@nestjs/typeorm": "^8.0.2",
