--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rimraf": "3.0.2",
     "rxjs": "7.4.0",
     "sharp": "^0.29.3",
+    "stripe": "^8.200.0",
     "twilio": "^3.71.3",
     "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
