--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "firebase": "^9.6.6",
+    "firebase-admin": "^10.0.2",
     "google-auth-library": "^7.10.3",
     "mime-types": "^2.1.34",
     "moment": "^2.29.1",
