--- a/package.json
+++ b/package.json
@@ -97,6 +97,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "modulePathIgnorePatterns": [
+      "database/migration",
+      ".*\\.dto\\.ts$",
+      ".*\\.config\\.ts$",
+      ".*\\.entity\\.ts$"
+    ]
   }
 }
