--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "passport": "0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "1.0.0",
-    "pino-http": "^6.0.0",
+    "pino-http": "^6.6.0",
+    "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.2.0",
     "probe-image-size": "^7.2.2",
     "reflect-metadata": "0.1.13",
